--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -189,16 +189,16 @@
           "height": 386
         },
         "id": "ndZPIGHpUmfr",
-        "outputId": "48cf3b3d-52d8-490a-a748-75e50055d52b"
+        "outputId": "e27bf062-74bf-46c5-d80c-c4ae5d4f6e17"
       },
-      "execution_count": 9,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-8091dba5-222f-4c0f-b7d8-ef3c9b6b5c6d\">\n",
+              "  <div id=\"df-a7798c76-0ff0-40ae-848d-6615d0eea2f6\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -726,7 +726,7 @@
               "</table>\n",
               "<p>5 rows × 86 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8091dba5-222f-4c0f-b7d8-ef3c9b6b5c6d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a7798c76-0ff0-40ae-848d-6615d0eea2f6')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -777,12 +777,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-8091dba5-222f-4c0f-b7d8-ef3c9b6b5c6d button.colab-df-convert');\n",
+              "          document.querySelector('#df-a7798c76-0ff0-40ae-848d-6615d0eea2f6 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-8091dba5-222f-4c0f-b7d8-ef3c9b6b5c6d');\n",
+              "          const element = document.querySelector('#df-a7798c76-0ff0-40ae-848d-6615d0eea2f6');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -815,7 +815,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 85
         }
       ]
     },
@@ -849,24 +849,8 @@
       "metadata": {
         "id": "eVyRgawrcldJ"
       },
-      "execution_count": 39,
+      "execution_count": 87,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 25,
-      "metadata": {
-        "id": "_Rb72cN-7Cqt"
-      },
-      "outputs": [],
-      "source": [
-        "# Create our features\n",
-        "X = df2.copy()\n",
-        "X=X.drop(\"loan_status\",axis=1)\n",
-        "# Need to convert columns with strings to numeric\n",
-        "X_enc=pd.get_dummies(X,columns=['home_ownership','verification_status','issue_d','pymnt_plan'])\n",
-        "\n"
-      ]
     },
     {
       "cell_type": "code",
@@ -879,16 +863,16 @@
           "height": 299
         },
         "id": "93RhgYCYbmNl",
-        "outputId": "2605d01d-b5dc-4e99-9cf6-68c5f3b0453c"
+        "outputId": "c7e7cdda-8838-492e-ecec-227bae544d94"
       },
-      "execution_count": 40,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-0ad0d196-859e-4eaf-a3f5-b7484c28f455\">\n",
+              "  <div id=\"df-1ce34def-fd1b-4c54-b7d9-32afc8820b04\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1416,7 +1400,7 @@
               "</table>\n",
               "<p>5 rows × 85 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0ad0d196-859e-4eaf-a3f5-b7484c28f455')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1ce34def-fd1b-4c54-b7d9-32afc8820b04')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1467,12 +1451,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-0ad0d196-859e-4eaf-a3f5-b7484c28f455 button.colab-df-convert');\n",
+              "          document.querySelector('#df-1ce34def-fd1b-4c54-b7d9-32afc8820b04 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-0ad0d196-859e-4eaf-a3f5-b7484c28f455');\n",
+              "          const element = document.querySelector('#df-1ce34def-fd1b-4c54-b7d9-32afc8820b04');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1505,16 +1489,16 @@
             ]
           },
           "metadata": {},
-          "execution_count": 40
+          "execution_count": 88
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 89,
       "metadata": {
         "id": "afzEmW227Cqv",
-        "outputId": "264e7238-3aa7-40b7-c8bd-c550f94e892d",
+        "outputId": "590526ca-b711-4974-89f5-291ed87f89fb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 394
@@ -1526,7 +1510,7 @@
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-dbe88ce6-a75e-426b-a88f-ab40d0d8ade0\">\n",
+              "  <div id=\"df-29a616a3-ac35-4d2f-89e3-614dc3feb633\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -2306,7 +2290,7 @@
               "</table>\n",
               "<p>8 rows × 85 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dbe88ce6-a75e-426b-a88f-ab40d0d8ade0')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-29a616a3-ac35-4d2f-89e3-614dc3feb633')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -2357,12 +2341,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-dbe88ce6-a75e-426b-a88f-ab40d0d8ade0 button.colab-df-convert');\n",
+              "          document.querySelector('#df-29a616a3-ac35-4d2f-89e3-614dc3feb633 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-dbe88ce6-a75e-426b-a88f-ab40d0d8ade0');\n",
+              "          const element = document.querySelector('#df-29a616a3-ac35-4d2f-89e3-614dc3feb633');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -2398,7 +2382,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 41
+          "execution_count": 89
         }
       ],
       "source": [
@@ -2407,10 +2391,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 90,
       "metadata": {
         "id": "hBTdXLhJ7Cqw",
-        "outputId": "dc287f7d-02ca-4e85-91b1-6d2ca68342ed",
+        "outputId": "e8e603e9-e099-43b2-df73-6d67ae55feb9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2426,7 +2410,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 90
         }
       ],
       "source": [
@@ -2436,7 +2420,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 91,
       "metadata": {
         "id": "QWq8fbux7Cqx"
       },
@@ -2484,10 +2468,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 92,
       "metadata": {
         "id": "PyVirVHh7Cqz",
-        "outputId": "9c53ce1a-501f-49e6-d49a-8bf15bd1314f",
+        "outputId": "a81aa288-6a45-4d5c-9c25-d085addcb0ee",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2501,7 +2485,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 50
+          "execution_count": 92
         }
       ],
       "source": [
@@ -2515,10 +2499,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 96,
       "metadata": {
         "id": "ABHDurFD7Cq0",
-        "outputId": "68842224-3f92-4777-d508-49e4ad51ae49",
+        "outputId": "bba8dd56-967a-4039-c490-97b2972dfd22",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2532,7 +2516,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 51
+          "execution_count": 96
         }
       ],
       "source": [
@@ -2545,10 +2529,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 97,
       "metadata": {
         "id": "Pptr7cvj7Cq0",
-        "outputId": "a20724fe-bd3d-4ce3-8e1f-d5842f52857b",
+        "outputId": "46f05ab3-b71f-43f9-d5c4-2e204fc45aa8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2558,11 +2542,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.6236369375938455"
+              "0.6198091204500011"
             ]
           },
           "metadata": {},
-          "execution_count": 52
+          "execution_count": 97
         }
       ],
       "source": [
@@ -2574,10 +2558,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 98,
       "metadata": {
         "id": "a9nlfthr7Cq1",
-        "outputId": "bd196aa4-39a7-4a2d-a097-b78c37445d52",
+        "outputId": "77b370ea-a739-41cf-b4a7-fff5e52d0146",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2587,12 +2571,12 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[   55,    37],\n",
-              "       [ 5999, 11114]])"
+              "array([[   54,    38],\n",
+              "       [ 5944, 11169]])"
             ]
           },
           "metadata": {},
-          "execution_count": 53
+          "execution_count": 98
         }
       ],
       "source": [
@@ -2603,10 +2587,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 100,
       "metadata": {
         "id": "OPP5g4nX7Cq1",
-        "outputId": "832345c3-1ceb-45e8-bdb7-14d8c2be2319",
+        "outputId": "70f31bc6-5bd7-4739-d999-d9fbb924b687",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2618,10 +2602,10 @@
           "text": [
             "                   pre       rec       spe        f1       geo       iba       sup\n",
             "\n",
-            "  high_risk       0.01      0.60      0.65      0.02      0.62      0.39        92\n",
-            "   low_risk       1.00      0.65      0.60      0.79      0.62      0.39     17113\n",
+            "  high_risk       0.01      0.59      0.65      0.02      0.62      0.38        92\n",
+            "   low_risk       1.00      0.65      0.59      0.79      0.62      0.39     17113\n",
             "\n",
-            "avg / total       0.99      0.65      0.60      0.78      0.62      0.39     17205\n",
+            "avg / total       0.99      0.65      0.59      0.78      0.62      0.39     17205\n",
             "\n"
           ]
         }
@@ -2643,16 +2627,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 101,
       "metadata": {
-        "id": "Q1g6PU_G7Cq2"
+        "id": "Q1g6PU_G7Cq2",
+        "outputId": "1e501bdf-b3f6-4d89-beea-cf5f4a29db32",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Counter({'high_risk': 51357, 'low_risk': 51357})"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 101
+        }
+      ],
       "source": [
         "# Resample the training data with SMOTE\n",
         "from imblearn.over_sampling import SMOTE\n",
         "X_resampled, y_resampled = SMOTE(random_state=1,\n",
-        "                                 sampling_strategy='auto').fit_resample(X_train, y_train)"
+        "                                 sampling_strategy='auto').fit_resample(X_train, y_train)\n",
+        "\n",
+        "Counter(y_resampled)"
       ]
     },
     {
@@ -2806,6 +2807,33 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "from collections import Counter\n",
+        "Counter(y_resampled)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HT0fWsmPlszs",
+        "outputId": "12661770-e047-4ea1-a3be-6b764bb6aacc"
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Counter({'high_risk': 255, 'low_risk': 255})"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 78
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 74,
       "metadata": {
         "id": "Tq-5WuiO7Cq5",
@@ -2955,6 +2983,17 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "a3J5DljNlrP9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": 69,
       "metadata": {
         "id": "aIdxLkhq7Cq7",
@@ -3100,9 +3139,7 @@
     "colab": {
       "name": "credit_risk_resampling.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "eRp5T5Gm7Cqr"
-      ],
+      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
