--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -155,6 +155,17 @@
     {
       "cell_type": "code",
       "source": [
+        "len(df.index)"
+      ],
+      "metadata": {
+        "id": "7iUQdqlypgk_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "df2=df.loc[:, columns].copy()\n",
         "\n",
         "# Drop the null columns where all values are null\n",
@@ -2468,10 +2479,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 102,
       "metadata": {
         "id": "PyVirVHh7Cqz",
-        "outputId": "a81aa288-6a45-4d5c-9c25-d085addcb0ee",
+        "outputId": "d4520e1b-fccc-4cee-a96d-1975921d597b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2485,7 +2496,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 92
+          "execution_count": 102
         }
       ],
       "source": [
@@ -2495,6 +2506,43 @@
         "X_resampled, y_resampled = ros.fit_resample(X_train, y_train)\n",
         "\n",
         "Counter(y_resampled)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_resampled"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IQVqRReooWa1",
+        "outputId": "9d789050-d58c-4835-a677-837741b9bd80"
+      },
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0          low_risk\n",
+              "1          low_risk\n",
+              "2          low_risk\n",
+              "3          low_risk\n",
+              "4          low_risk\n",
+              "            ...    \n",
+              "102709    high_risk\n",
+              "102710    high_risk\n",
+              "102711    high_risk\n",
+              "102712    high_risk\n",
+              "102713    high_risk\n",
+              "Name: loan_status, Length: 102714, dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 103
+        }
       ]
     },
     {
@@ -2627,10 +2675,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": 119,
       "metadata": {
         "id": "Q1g6PU_G7Cq2",
-        "outputId": "1e501bdf-b3f6-4d89-beea-cf5f4a29db32",
+        "outputId": "f324819b-2797-4c58-e890-0eaca28c0468",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2644,7 +2692,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 101
+          "execution_count": 119
         }
       ],
       "source": [
@@ -2658,10 +2706,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 120,
       "metadata": {
         "id": "th942s5F7Cq2",
-        "outputId": "0f424baf-f11c-4d81-9839-28f34eba05e3",
+        "outputId": "639f0bde-35c6-4d19-cb20-f801917eb246",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2675,7 +2723,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 58
+          "execution_count": 120
         }
       ],
       "source": [
@@ -2686,10 +2734,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 121,
       "metadata": {
         "id": "IsZdDoV07Cq3",
-        "outputId": "4ecd494a-d57a-41ba-9656-d37ef04659fe",
+        "outputId": "4d9f859a-2f8d-4f06-f490-8eab8b5fb07d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2703,7 +2751,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 59
+          "execution_count": 121
         }
       ],
       "source": [
@@ -2791,34 +2839,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 110,
       "metadata": {
-        "id": "dzDfKQ577Cq4"
-      },
-      "outputs": [],
-      "source": [
-        "# Resample the data using the ClusterCentroids resampler\n",
-        "# Warning: This is a large dataset, and this step may take some time to complete\n",
-        "\n",
-        "from imblearn.under_sampling import ClusterCentroids\n",
-        "cc = ClusterCentroids(random_state=1)\n",
-        "X_resampled, y_resampled = cc.fit_resample(X_train, y_train)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from collections import Counter\n",
-        "Counter(y_resampled)\n"
-      ],
-      "metadata": {
+        "id": "dzDfKQ577Cq4",
+        "outputId": "6d5067f4-f8ff-46c5-c1b8-24fb275b90cf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "HT0fWsmPlszs",
-        "outputId": "12661770-e047-4ea1-a3be-6b764bb6aacc"
+        }
       },
-      "execution_count": 78,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2828,16 +2856,26 @@
             ]
           },
           "metadata": {},
-          "execution_count": 78
+          "execution_count": 110
         }
+      ],
+      "source": [
+        "# Resample the data using the ClusterCentroids resampler\n",
+        "# Warning: This is a large dataset, and this step may take some time to complete\n",
+        "\n",
+        "from imblearn.under_sampling import ClusterCentroids\n",
+        "cc = ClusterCentroids(random_state=1)\n",
+        "X_resampled, y_resampled = cc.fit_resample(X_train, y_train)\n",
+        "\n",
+        "Counter(y_resampled)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 115,
       "metadata": {
         "id": "Tq-5WuiO7Cq5",
-        "outputId": "5d8ad40e-f5bd-41c3-8e82-8b16f6644dbf",
+        "outputId": "7d77b395-c6c6-4fc1-eed0-09fb50dcf171",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2851,7 +2889,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 74
+          "execution_count": 115
         }
       ],
       "source": [
@@ -2862,10 +2900,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 116,
       "metadata": {
         "id": "LD3yAPK87Cq5",
-        "outputId": "e9adf885-9e64-4aa1-e5b9-de03e405d97d",
+        "outputId": "a265a347-9015-4404-8f0d-ddc03a71c154",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2879,7 +2917,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 75
+          "execution_count": 116
         }
       ],
       "source": [
@@ -2890,10 +2928,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 117,
       "metadata": {
         "id": "nx8qOj_i7Cq5",
-        "outputId": "336cd750-fdd2-4f0d-aae3-a3a172877997",
+        "outputId": "775d9850-1876-4d96-b3c2-8c3e5106016e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2908,7 +2946,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 76
+          "execution_count": 117
         }
       ],
       "source": [
@@ -2918,10 +2956,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 118,
       "metadata": {
         "id": "jJPet2jY7Cq5",
-        "outputId": "c83cb839-2001-4e70-ffc3-c86279abcbe5",
+        "outputId": "4aefd792-1c68-4a3d-ed4b-6ae073b7ba78",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2967,37 +3005,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 105,
       "metadata": {
-        "id": "laMedVRU7Cq6"
+        "id": "laMedVRU7Cq6",
+        "outputId": "a52a026f-a284-4633-a083-7eeca156ead1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Counter({'high_risk': 68458, 'low_risk': 62022})"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 105
+        }
+      ],
       "source": [
         "# Resample the training data with SMOTEENN\n",
         "# Warning: This is a large dataset, and this step may take some time to complete\n",
         "from imblearn.combine import SMOTEENN\n",
         "\n",
         "sme = SMOTEENN(random_state=1)\n",
-        "X_res, y_res = sme.fit_resample(X, y)"
+        "X_res, y_res = sme.fit_resample(X, y)\n",
+        "\n",
+        "Counter(y_res)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "a3J5DljNlrP9"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 106,
       "metadata": {
         "id": "aIdxLkhq7Cq7",
-        "outputId": "a7adb09e-20e4-439d-c1d8-4c0563223909",
+        "outputId": "9e423fe4-1d2a-4917-94fb-224ee2d82684",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -3011,7 +3055,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 69
+          "execution_count": 106
         }
       ],
       "source": [
@@ -3022,10 +3066,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 107,
       "metadata": {
         "id": "hFWzkAyg7Cq7",
-        "outputId": "83ba0214-50b5-4e04-c42b-3d61c242b5d3",
+        "outputId": "89aab290-526c-4a4d-a91e-af3a39bf8599",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -3035,11 +3079,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.5055684846760282"
+              "0.6345649379190496"
             ]
           },
           "metadata": {},
-          "execution_count": 70
+          "execution_count": 107
         }
       ],
       "source": [
@@ -3050,10 +3094,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 108,
       "metadata": {
         "id": "E-807q5s7Cq7",
-        "outputId": "e1a63ad8-b70d-47c9-8a43-8342a113f908",
+        "outputId": "7a94a031-8cd4-4709-fef3-8acc04a71fa9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -3063,12 +3107,12 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[  54,   38],\n",
-              "       [9854, 7259]])"
+              "array([[   57,    35],\n",
+              "       [ 5997, 11116]])"
             ]
           },
           "metadata": {},
-          "execution_count": 71
+          "execution_count": 108
         }
       ],
       "source": [
@@ -3078,10 +3122,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 109,
       "metadata": {
         "id": "E2IItmwa7Cq8",
-        "outputId": "f373f859-5882-4865-c6ae-18da66f45f22",
+        "outputId": "0c36f863-6cf4-447e-eac6-3b75e56c656c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -3093,10 +3137,10 @@
           "text": [
             "                   pre       rec       spe        f1       geo       iba       sup\n",
             "\n",
-            "  high_risk       0.01      0.59      0.42      0.01      0.50      0.25        92\n",
-            "   low_risk       0.99      0.42      0.59      0.59      0.50      0.24     17113\n",
+            "  high_risk       0.01      0.62      0.65      0.02      0.63      0.40        92\n",
+            "   low_risk       1.00      0.65      0.62      0.79      0.63      0.40     17113\n",
             "\n",
-            "avg / total       0.99      0.43      0.59      0.59      0.50      0.24     17205\n",
+            "avg / total       0.99      0.65      0.62      0.78      0.63      0.40     17205\n",
             "\n"
           ]
         }
